--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -13,7 +13,7 @@
 	},
 	"observability": {
 		"enabled": true
-	}
+	},
 	/**
 	 * Smart Placement
 	 * Docs: https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
@@ -26,6 +26,13 @@
 	 * databases, object storage, AI inference, real-time communication and more.
 	 * https://developers.cloudflare.com/workers/runtime-apis/bindings/
 	 */
+	 "d1_databases": [
+		{
+		"binding": "DB",
+		"database_name": "topviews",
+		"database_id": "b0d0e50e-4d1b-4358-9de3-e092f9cb3b67"
+		}
+	]
 
 	/**
 	 * Environment Variables
