--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@tailwindcss/vite": "^4.0.0",
 		"flowbite": "^3.1.2",
 		"flowbite-svelte": "^1.10.13",
+		"flowbite-svelte-icons": "^2.2.1",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"tailwindcss": "^4.0.0",
