--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@sveltejs/kit": "^2.22.0",
 		"@sveltejs/vite-plugin-svelte": "^6.0.0",
 		"@tailwindcss/vite": "^4.0.0",
+		"@types/bcryptjs": "^2.4.6",
 		"flowbite": "^3.1.2",
 		"flowbite-svelte": "^1.10.13",
 		"flowbite-svelte-icons": "^2.2.1",
@@ -29,5 +30,8 @@
 		"typescript": "^5.0.0",
 		"vite": "^7.0.6",
 		"wrangler": "^4.26.0"
+	},
+	"dependencies": {
+		"bcryptjs": "^3.0.2"
 	}
 }
