--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@sveltejs/vite-plugin-svelte": "^6.0.0",
 		"@tailwindcss/vite": "^4.0.0",
 		"@types/bcryptjs": "^2.4.6",
+		"@types/jsonwebtoken": "^9.0.10",
 		"flowbite": "^3.1.2",
 		"flowbite-svelte": "^1.10.13",
 		"flowbite-svelte-icons": "^2.2.1",
@@ -32,6 +33,7 @@
 		"wrangler": "^4.26.0"
 	},
 	"dependencies": {
-		"bcryptjs": "^3.0.2"
+		"bcryptjs": "^3.0.2",
+		"jsonwebtoken": "^9.0.2"
 	}
 }
