--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -6,7 +6,8 @@
 	"$schema": "node_modules/wrangler/config-schema.json",
 	"name": "topview-leaderboard",
 	"main": ".svelte-kit/cloudflare/_worker.js",
-	"compatibility_date": "2025-07-19",
+	"compatibility_date": "2025-08-17",
+  	"compatibility_flags": ["nodejs_compat"],
 	"assets": {
 		"binding": "ASSETS",
 		"directory": ".svelte-kit/cloudflare"
