render 0/0 as 0 in tickets table

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@tailwindcss/vite": "^4.0.0",
 		"@types/bcryptjs": "^2.4.6",
 		"@types/jsonwebtoken": "^9.0.10",
+		"@vitejs/plugin-basic-ssl": "^2.1.0",
 		"flowbite": "^3.1.2",
 		"flowbite-svelte": "^1.10.13",
 		"flowbite-svelte-icons": "^2.2.1",
